--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@azure/storage-blob": "^12.8.0",
+        "axios": "^1.11.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
@@ -49,6 +50,6 @@
         "nodemon": "^2.0.4"
     },
     "engines": {
-        "node" : ">=18.0.0 <20.0.0"
+        "node": ">=18.0.0 <20.0.0"
     }
 }
